Clean up index.html by removing unused elements
Removed temporary navigation button and PDF download instructions.

--- a/index.html
+++ b/index.html
@@ -220,11 +220,7 @@
         <button title="Perbesar" aria-label="Perbesar tampilan" style="padding:6px 10px;border-radius:10px;background:#4b8df8;color:#fff" onclick="adjustZoom(1.1)">A+</button>
       </div>
     </div>
-
-    <!-- Navigasi Sementara ke Pertemuan 1 -->
-    <div style="position:fixed;top:18px;right:18px;z-index:9999">
-      <button onclick="updateSlide(91)" style="padding:10px 18px;background:linear-gradient(135deg,#4b8df8,#6da8ff);color:#fff;border:none;border-radius:10px;font-weight:700;box-shadow:0 4px 12px rgba(75,141,248,0.3);font-family:'Plus Jakarta Sans',sans-serif;cursor:pointer">🔎 Cek Pertemuan 1</button>
-    </div>
+      
     <div class="card">
       <div class="grid-head">
         <div style="display:flex;align-items:center;justify-content:space-between;width:100%;margin-bottom:8px;position:relative;">
@@ -382,18 +378,8 @@
               • <strong>Hapus Hasil:</strong> Klik tombol "🗑️ Hapus Semua Hasil" jika ingin menghapus semua perhitungan dan mulai dari awal
             </div>
 
-            <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
-              <strong>D. Download Proyek sebagai PDF 📥</strong><br>
-              • <strong>Lokasi Tombol:</strong> Tombol "📥 Download Proyek Lengkap (PDF)" ada di halaman Kalkulator Statistik<br>
-              • <strong>Isi PDF:</strong> File PDF akan berisi 2 bagian lengkap:<br>
-              &nbsp;&nbsp;&nbsp;1️⃣ Halaman Data Kelompok (nama kelompok, anggota, sekolah)<br>
-              &nbsp;&nbsp;&nbsp;2️⃣ Halaman Kalkulator (data yang diinput + semua hasil perhitungan)<br>
-              • <strong>Kualitas:</strong> PDF berkualitas tinggi dengan warna jelas dan tajam<br>
-              • <strong>Nama File:</strong> Otomatis menggunakan format Proyek_Lengkap_[NamaKelompok]_[Tanggal].pdf
-            </div>
-
             <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#f9fbff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
-              <strong>E. Tips Resiliensi Digital</strong><br>
+              <strong>D. Tips Resiliensi Digital</strong><br>
               • <strong>Jangan Panik:</strong> Jika ada masalah, periksa kembali data yang diinput atau coba refresh halaman (literasi digital)<br>
               • <strong>Simpan Hasil:</strong> Download PDF proyekmu secara berkala agar tidak kehilangan data<br>
               • <strong>Eksplorasi Bebas:</strong> Coba hitung semua jenis statistik (Mean, Median, Modus, dll) untuk memahami perbedaannya<br>
