--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
       <div class="grid-head">
         <div style="display:flex;align-items:center;justify-content:space-between;width:100%;margin-bottom:8px;position:relative;">
           <div style="display:flex;align-items:center;gap:10px;min-width:120px;">
-            <img src="../upi.jpeg" alt="Logo UPI" title="Universitas Pendidikan Indonesia" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-block'" style="height:38px;width:auto;">
+            <img src="/upi.jpeg" alt="Logo UPI" title="Universitas Pendidikan Indonesia" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-block'" style="height:38px;width:auto;">
             <span class="genty" style="display:none;font-weight:700;color:#0f172a">UPI</span>
-            <img src="../dv.jpeg" alt="Logo DataVista" title="DataVista" style="height:48px;width:auto;">
+            <img src="dv.jpeg" alt="Logo DataVista" title="DataVista" style="height:48px;width:auto;">
           </div>
           <h1 class="title" style="color: #4b8df8;margin:0;position:absolute;left:37%;transform:translateX(-50%);text-align:center;width:max-content;">Media DataVista</h1>
           <div style="min-width:120px;"></div>
