Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="grid-head">
         <div style="display:flex;align-items:center;justify-content:space-between;width:100%;margin-bottom:8px;position:relative;">
           <div style="display:flex;align-items:center;gap:10px;min-width:120px;">
-            <img src="/upi.jpeg" alt="Logo UPI" title="Universitas Pendidikan Indonesia" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-block'" style="height:38px;width:auto;">
+            <img src="upi.jpeg" alt="Logo UPI" title="Universitas Pendidikan Indonesia" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-block'" style="height:38px;width:auto;">
             <span class="genty" style="display:none;font-weight:700;color:#0f172a">UPI</span>
             <img src="dv.jpeg" alt="Logo DataVista" title="DataVista" style="height:48px;width:auto;">
           </div>
@@ -440,7 +440,7 @@
           <div class="card-lite" style="text-align:left;padding:32px 24px">
             <div class="genty" style="font-size:22px;font-weight:700;margin-bottom:10px">🗺️ Peta Konsep</div>
             <div class="img-placeholder" style="padding:12px">
-              <img src="../pk2.jpeg" alt="Peta Konsep DataVista (pk2)" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="pk2.jpeg" alt="Peta Konsep DataVista (pk2)" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
 
             <div style="margin-top:24px;display:flex;justify-content:space-between;gap:12px">
@@ -601,7 +601,7 @@
           <div class="card-lite" style="text-align:left;padding:32px 24px">
             <div class="genty" style="font-size:22px;font-weight:700;margin-bottom:10px">Mean</div>
             <div class="img-placeholder" style="padding:12px">
-              <img src="../rata.png" alt="Mean" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="rata.png" alt="Mean" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div class="genty" style="margin-top:16px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               Diagram Batang tersebut menggambarkan pasien Covid-19 yang sembuh dari 5 Provinsi di Indonesia. Berapakah nilai rata-ratanya?<br><br>
@@ -609,19 +609,19 @@
               <strong>Langkah pertama,</strong> data yang ada di diagram batang diubah dalam bentuk tabel, seperti berikut ini.
             </div>
             <div class="img-placeholder" style="padding:12px;margin-top:14px">
-              <img src="../rata2.png" alt="Langkah Kedua Mean" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="rata2.png" alt="Langkah Kedua Mean" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               <strong>Langkah kedua,</strong> jumlahkan semua data tersebut, bagilah dengan banyak data, dalam hal ini karena ada 5 Provinsi, maka banyak ada ada 5. Hasil dari Pembagian tersebut menunjukkan nilai rata-rata dari Pasien yang sembuh Covid-19 untuk 5 Provinsi
             </div>
             <div class="img-placeholder" style="padding:12px;margin-top:14px">
-              <img src="../rata3-1.png" alt="Langkah Kedua Mean - Perhitungan" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="rata3-1.png" alt="Langkah Kedua Mean - Perhitungan" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               Untuk menentukan rata-rata dari suatu data yang cukup banyak dapat digunakan dengan cara menjumlahkan hasil kali antara data dengan frekuensinya setelah itu dibagi dengan banyak data yang ada. Dalam bentuk umum dapat ditulis,
             </div>
             <div class="img-placeholder" style="padding:12px;margin-top:14px">
-              <img src="../rata4.png" alt="Rumus Mean" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="rata4.png" alt="Rumus Mean" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
           </div>
         </section>
@@ -630,7 +630,7 @@
           <div class="card-lite" style="text-align:left;padding:32px 24px">
             <div class="genty" style="font-size:22px;font-weight:700;margin-bottom:14px">Modus</div>
             <div class="img-placeholder" style="padding:12px">
-              <img src="../modus.png" alt="Modus" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="modus.png" alt="Modus" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div class="genty" style="margin-top:16px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               Untuk memahami modus dari suatu data, coba perhatikan data kasus Positif Covid-19 di salah satu Provinsi di Indonesia pada gambar 6.2. Dalam grafik tersebut dipaparkan data kasus Covid-19 di salah satu Provinsi di Indonesia mulai bulan Maret 2020 sampai April 2022. Dari tabel tersebut terlihat jelas bahwa data terendah pada bulan Maret 2020 dan data tertinggi pada bulan Juli 2021 sebesar 9.651 kasus. <strong>Modus dari suatu data adalah data yang sering muncul.</strong> Dengan demikian, kalian dapat menentukan modus pada gambar 6.3 yaitu data yang sering muncul pada bulan Juli 2021, yaitu sebesar 9.651 kasus, sehingga modus dari diagram tersebut adalah Juli 2021.
@@ -665,7 +665,7 @@
           <div class="card-lite" style="text-align:left;padding:32px 24px">
             <div class="genty" style="font-size:22px;font-weight:700;margin-bottom:14px">Modus</div>
             <div class="img-placeholder" style="padding:12px">
-              <img src="../modus.png" alt="Modus" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="modus.png" alt="Modus" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div class="genty" style="margin-top:16px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               Untuk memahami modus dari suatu data, coba perhatikan data kasus Positif Covid-19 di salah satu Provinsi di Indonesia pada gambar 6.2. Dalam grafik tersebut dipaparkan data kasus Covid-19 di salah satu Provinsi di Indonesia mulai bulan Maret 2020 sampai April 2022. Dari tabel tersebut terlihat jelas bahwa data terendah pada bulan Maret 2020 dan data tertinggi pada bulan Juli 2021 sebesar 9.651 kasus. <strong>Modus dari suatu data adalah data yang sering muncul.</strong> Dengan demikian, kalian dapat menentukan modus pada gambar 6.3 yaitu data yang sering muncul pada bulan Juli 2021, yaitu sebesar 9.651 kasus, sehingga modus dari diagram tersebut adalah Juli 2021.
@@ -681,7 +681,7 @@
               <strong>Langkah pertama</strong> yaitu mengurutkan data tersebut dari data terkecil sampai data terbesar<br>
               <strong>Langkah kedua</strong> yaitu pasangkan data yang sudah terurut dari sisi luar ke sisi dalam, sehingga menyisakan satu data tunggal<br>
               <div style="margin-top:12px;padding:10px;border-radius:8px;background:#f9fbff;display:flex;justify-content:center">
-                <img src="/images/median.png" alt="Median Data Ganjil" style="max-width:100%;height:auto;border-radius:8px;box-shadow:0 4px 12px rgba(15,23,42,0.1)">
+                <img src="median.png" alt="Median Data Ganjil" style="max-width:100%;height:auto;border-radius:8px;box-shadow:0 4px 12px rgba(15,23,42,0.1)">
               </div>
               <strong>Langkah ketiga</strong> yaitu<br>
               Data bagian tengah yang tidak memiliki pasangan dinamakan dengan Median.
@@ -703,7 +703,7 @@
               Jangkauan (range) adalah selisih antara data terbesar dan data terkecil. Jangkauan digunakan untuk mengukur penyebaran data yang paling sederhana.
             </div>
             <div class="img-placeholder" style="padding:12px;margin-top:14px">
-              <img src="../jk.png" alt="Jangkauan" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="jk.png" alt="Jangkauan" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               Gambar diagram garis tersebut menggambarkan perkembangan produksi beras di Indonesia dalam satuan Ribuan Ton untuk tahun 2020 (garis hijau) dan tahun 2021 (garis merah). Dalam diagram garis tersebut terlihat bahwa produksi beras Indonesia mengalami kenaikan dan penurunan pada bulan-bulan tertentu. Selisih produksi beras tertinggi dan terendah dalam setahun dapat ditentukan dengan cara mengurangi data tertinggi dengan data terendah
