--- a/Media_Datavista_P5.html
+++ b/Media_Datavista_P5.html
@@ -251,6 +251,7 @@
           <div style="margin-top:24px;display:flex;justify-content:space-between;gap:12px">
             <button onclick="updateSlide(506)" class="btn-ghost">← Sebelumnya</button>
             <button onclick="showSelesaiPopup()" class="btn-primary">Selesai</button>
+            <button id="downloadPDFBtn" onclick="downloadPDF()" class="btn-primary">Download PDF</button>
           </div>
         </div>
       </section>
@@ -267,25 +268,182 @@
         } else {
           sl.classList.remove('active');
           sl.style.display = 'none';
-        }
+        }77
       });
       window.scrollTo(0,0);
     }
     // Inisialisasi: tampilkan slide pertama (501)
     document.addEventListener('DOMContentLoaded', function() {
       showSlideByDataSlide(501);
+      // (Tombol Download PDF sekarang hanya ada di slide terakhir)
     });
     // Ganti semua tombol updateSlide agar pakai showSlideByDataSlide
     window.updateSlide = showSlideByDataSlide;
     // Fungsi tambah anggota (dummy, bisa dikembangkan)
     function addMember() {
-      // ...fungsi tambah anggota kelompok...
-      alert('Fitur tambah anggota belum diimplementasikan.');
+      const nameInput = document.getElementById('memberName');
+      const roleInput = document.getElementById('memberRole');
+      const membersList = document.getElementById('membersList');
+      const name = nameInput.value.trim();
+      const role = roleInput.value;
+      if (!name) {
+        alert('Nama anggota tidak boleh kosong!');
+        nameInput.focus();
+        return;
+      }
+      // Buat elemen anggota
+      const div = document.createElement('div');
+      div.className = 'anggota-item';
+      div.style = 'padding:10px 12px;background:#f4f8ff;border:1px solid #dbe6ff;border-radius:10px;margin-bottom:6px;display:flex;align-items:center;gap:8px;';
+      const namaSpan = document.createElement('span');
+      namaSpan.className = 'anggota-nama';
+      namaSpan.textContent = name;
+      namaSpan.style = 'font-weight:600;color:#1e293b;';
+      const roleSpan = document.createElement('span');
+      roleSpan.className = 'anggota-role';
+      roleSpan.textContent = '('+role+')';
+      roleSpan.style = 'font-size:13px;color:#64748b;';
+      // Tombol hapus anggota
+      const delBtn = document.createElement('button');
+      delBtn.textContent = '✕';
+      delBtn.title = 'Hapus anggota';
+      delBtn.style = 'margin-left:auto;background:#e2e8f0;color:#334155;border:none;border-radius:6px;padding:2px 8px;cursor:pointer;font-size:13px;';
+      delBtn.onclick = function() {
+        membersList.removeChild(div);
+      };
+      div.appendChild(namaSpan);
+      div.appendChild(roleSpan);
+      div.appendChild(delBtn);
+      membersList.appendChild(div);
+      // Reset input
+      nameInput.value = '';
+      nameInput.focus();
     }
 
     // Pop up selesai
     function showSelesaiPopup() {
       alert('Pengerjaanmu selesai!');
+    }
+
+    // Fungsi Download PDF
+    async function downloadPDF() {
+      // Load jsPDF & html2canvas jika belum ada
+      if (typeof window.jspdf === 'undefined') {
+        await loadScript('tools/libs/jspdf.umd.min.js');
+      }
+      if (typeof window.html2canvas === 'undefined') {
+        await loadScript('tools/libs/html2canvas.min.js');
+      }
+      const { jsPDF } = window.jspdf;
+
+      // Ambil data identitas
+      const groupName = document.getElementById('groupName')?.value || '-';
+      const schoolName = document.getElementById('schoolName')?.value || '-';
+      // Ambil anggota kelompok (dari #membersList, fallback: kosong)
+      let anggota = [];
+      document.querySelectorAll('#membersList .anggota-nama').forEach(el => {
+        anggota.push(el.textContent.trim());
+      });
+      if (anggota.length === 0) anggota.push('-');
+
+      // Ambil semua textarea (urut sesuai tampilan)
+      const textareas = document.querySelectorAll('textarea');
+      // Ambil semua input (type text/number di slide 503, 504)
+      const inputs = document.querySelectorAll('section.slide input[type="text"], section.slide input[type="number"]');
+
+      // Ambil jawaban evaluasi (checkbox)
+      const evaluasi = [
+        { label: 'Saya berperan aktif dalam kelompok', name: 'aktif' },
+        { label: 'Saya memahami data yang dianalisis', name: 'paham' },
+        { label: 'Saya berani menyampaikan pendapat', name: 'berani' },
+        { label: 'Saya tidak mudah menyerah saat mengalami kesulitan', name: 'pantang' },
+        { label: 'Saya menggunakan data untuk menarik Kesimpulan', name: 'data' },
+      ];
+      function getCheckboxValue(name) {
+        const ya = document.querySelector('input[name="'+name+' "][value="ya"]')?.checked;
+        const tidak = document.querySelector('input[name="'+name+' "][value="tidak"]')?.checked;
+        if (ya) return 'Ya';
+        if (tidak) return 'Tidak';
+        return '-';
+      }
+
+      // Siapkan PDF
+      const doc = new jsPDF();
+      let y = 15;
+      doc.setFont('helvetica','bold');
+      doc.setFontSize(16);
+      doc.text('HASIL PENGERJAAN KELOMPOK', 105, y, { align: 'center' });
+      y += 10;
+      doc.setFontSize(11);
+      doc.setFont('helvetica','normal');
+      doc.text('Nama Kelompok: ' + groupName, 15, y);
+      y += 7;
+      doc.text('Sekolah: ' + schoolName, 15, y);
+      y += 7;
+      doc.text('Anggota Kelompok:', 15, y);
+      y += 6;
+      anggota.forEach((nama, idx) => {
+        doc.text('- ' + nama, 20, y);
+        y += 6;
+      });
+      y += 2;
+      doc.setFont('helvetica','bold');
+      doc.text('Ringkasan Proyek:', 15, y);
+      doc.setFont('helvetica','normal');
+      y += 7;
+      doc.text('1. Fokus data: ' + (textareas[0]?.value || '-'), 15, y);
+      y += 7;
+      doc.text('2. Jumlah responden: ' + (inputs[0]?.value || '-'), 15, y);
+      y += 7;
+      doc.text('3. Informasi utama: ' + (textareas[1]?.value || '-'), 15, y);
+      y += 10;
+      doc.setFont('helvetica','bold');
+      doc.text('Penyajian Hasil Statistik:', 15, y);
+      doc.setFont('helvetica','normal');
+      y += 7;
+      const statistik = ['Rata-rata','Median','Modus','Jangkauan','Kuartil'];
+      for (let i=0; i<5; i++) {
+        doc.text(statistik[i]+': ' + (inputs[1+i*2]?.value || '-') + ' | ' + (inputs[2+i*2]?.value || '-'), 15, y);
+        y += 6;
+      }
+      y += 2;
+      doc.setFont('helvetica','bold');
+      doc.text('Kesimpulan:', 15, y);
+      doc.setFont('helvetica','normal');
+      y += 7;
+      doc.text((textareas[2]?.value || '-'), 15, y, { maxWidth: 180 });
+      y += 12;
+      doc.setFont('helvetica','bold');
+      doc.text('Refleksi Kelompok:', 15, y);
+      doc.setFont('helvetica','normal');
+      y += 7;
+      doc.text('1. Tantangan: ' + (textareas[3]?.value || '-'), 15, y, { maxWidth: 180 });
+      y += 7;
+      doc.text('2. Cara mengatasi: ' + (textareas[4]?.value || '-'), 15, y, { maxWidth: 180 });
+      y += 7;
+      doc.text('3. Pelajaran penting: ' + (textareas[5]?.value || '-'), 15, y, { maxWidth: 180 });
+      y += 10;
+      doc.setFont('helvetica','bold');
+      doc.text('Evaluasi Diri:', 15, y);
+      doc.setFont('helvetica','normal');
+      y += 7;
+      evaluasi.forEach((ev, idx) => {
+        doc.text((idx+1)+'. '+ev.label+': '+getCheckboxValue(ev.name), 15, y, { maxWidth: 180 });
+        y += 6;
+      });
+
+      doc.save('hasil_kelompok.pdf');
+    }
+
+    // Loader eksternal script
+    function loadScript(src) {
+      return new Promise((resolve, reject) => {
+        const s = document.createElement('script');
+        s.src = src;
+        s.onload = resolve;
+        s.onerror = reject;
+        document.head.appendChild(s);
+      });
     }
   </script>
 </body>
