--- a/Media_Datavista_P4.html
+++ b/Media_Datavista_P4.html
@@ -539,6 +539,7 @@
           <div style="margin-top:24px;display:flex;justify-content:space-between;gap:12px">
             <button onclick="updateSlide(405)" class="btn-ghost">← Sebelumnya</button>
             <button onclick="showSelesaiPopup()" class="btn-primary">Selesai</button>
+            <button onclick="updateSlide(1001)" style="padding:12px 24px;background:linear-gradient(135deg,#10b981,#34d399);color:#fff;border:none;border-radius:10px;font-weight:700;cursor:pointer;font-family:'Plus Jakarta Sans',sans-serif;box-shadow:0 4px 12px rgba(16,185,129,0.3);transition:all 0.22s ease" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">Penyajian Data</button>
             <button id="downloadPDFBtn" onclick="downloadPDF()" class="btn-primary">Download PDF</button>
           </div>
         </div>
