--- a/Media_Datavista_P2.html
+++ b/Media_Datavista_P2.html
@@ -906,12 +906,9 @@
             <label style="display:block;margin-bottom:6px"><input type="checkbox" style="margin-right:8px">Aktivitas 9: Komunikasi dan Kolaborasi Tim</label>
             <label style="display:block;margin-bottom:6px"><input type="checkbox" style="margin-right:8px">Aktivitas 10: Refleksi Perencanaan</label>
           </div>
-          <div style="margin-top:24px;display:flex;justify-content:flex-end;gap:12px">
-            <button onclick="showSelesaiPopup()" class="btn-primary">Selesai</button>
-          </div>
           <div style="margin-top:24px;display:flex;justify-content:space-between;gap:12px">
             <button onclick="updateSlide(211)" class="btn-ghost">← Sebelumnya</button>
-            <button class="btn-primary" style="background:#4b8df8;cursor:default">Selesai</button>
+            <button onclick="updateSlide(1001)" style="padding:12px 24px;background:linear-gradient(135deg,#10b981,#34d399);color:#fff;border:none;border-radius:10px;font-weight:700;cursor:pointer;font-family:'Plus Jakarta Sans',sans-serif;box-shadow:0 4px 12px rgba(16,185,129,0.3);transition:all 0.22s ease" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">Penyajian Data</button>
             <button id="downloadPDFBtn" onclick="downloadPDF()" class="btn-primary">Download PDF</button>
           </div>
         </div>
