--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
         <button title="Perbesar" aria-label="Perbesar tampilan" style="padding:6px 10px;border-radius:10px;background:#4b8df8;color:#fff" onclick="adjustZoom(1.1)">A+</button>
       </div>
     </div>
-   
+
+
     <div class="card">
       <div class="grid-head">
         <div style="display:flex;align-items:center;justify-content:space-between;width:100%;margin-bottom:8px;position:relative;">
@@ -230,7 +231,9 @@
             <img src="dv.jpeg" alt="Logo DataVista" title="DataVista" style="height:48px;width:auto;">
           </div>
           <h1 class="title" style="color: #4b8df8;margin:0;position:absolute;left:37%;transform:translateX(-50%);text-align:center;width:max-content;">Media DataVista</h1>
-          <div style="min-width:120px;"></div>
+          <div style="min-width:120px;display:flex;justify-content:flex-end;align-items:center;">
+            <button aria-label="Kembali ke Halaman Awal" onclick="updateSlide(1)" title="Beranda" style="border:none;background:#eef3ff;cursor:pointer;font-size:18px;line-height:1;border-radius:10px;padding:6px 10px;">🏠</button>
+          </div>
         </div>
       </div>
 
@@ -284,7 +287,6 @@
 
         <section class="slide" data-slide="2">
           <div class="card-lite" style="text-align:center;padding:32px 24px;position:relative">
-            <button aria-label="Kembali ke Halaman Awal" onclick="updateSlide(1)" title="Beranda" style="position:absolute;top:12px;left:12px;border:none;background:transparent;cursor:pointer;font-size:18px;line-height:1">🏠</button>
 
             <!-- Logo sudah di lapisan atas, tidak perlu di sini lagi -->
 
@@ -354,68 +356,37 @@
             <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
               <strong>Petunjuk Penggunaan Media DataVista</strong><br><br>
               1. <strong>Persiapan Awal</strong><br>
-              &nbsp;&nbsp;• Pastikan perangkat terhubung ke internet dan browser sudah diperbarui.<br>
-              &nbsp;&nbsp;• Buka file Media DataVista sesuai pertemuan yang dipelajari.<br><br>
+              &nbsp;&nbsp;a. Pastikan perangkat terhubung ke internet dan browser sudah diperbarui.<br>
+              &nbsp;&nbsp;b. Buka file Media DataVista sesuai pertemuan yang dipelajari.<br><br>
               2. <strong>Mengisi Identitas Kelompok</strong><br>
-              &nbsp;&nbsp;• Isi nama kelompok dan nama sekolah di halaman pertama.<br>
-              &nbsp;&nbsp;• Tambahkan anggota kelompok satu per satu, isi nama dan pilih peran, lalu klik “Tambahkan ke Kelompok”.<br>
-              &nbsp;&nbsp;• Pastikan semua anggota tercantum sebelum lanjut.<br><br>
+              &nbsp;&nbsp;a. Isi nama kelompok dan nama sekolah di halaman pertama.<br>
+              &nbsp;&nbsp;b. Tambahkan anggota kelompok satu per satu, isi nama dan pilih peran, lalu klik “Tambahkan ke Kelompok”.<br>
+              &nbsp;&nbsp;c. Pastikan semua anggota tercantum sebelum lanjut.<br><br>
               3. <strong>Membaca Tujuan dan Petunjuk Kegiatan</strong><br>
-              &nbsp;&nbsp;• Bacalah tujuan pembelajaran dan petunjuk kegiatan di slide kedua.<br>
-              &nbsp;&nbsp;• Diskusikan bersama anggota kelompok agar semua memahami target pembelajaran.<br><br>
+              &nbsp;&nbsp;a. Bacalah tujuan pembelajaran dan petunjuk kegiatan di slide kedua.<br>
+              &nbsp;&nbsp;b. Diskusikan bersama anggota kelompok agar semua memahami target pembelajaran.<br><br>
               4. <strong>Mengerjakan Soal dan Aktivitas</strong><br>
-              &nbsp;&nbsp;• Kerjakan setiap soal/aktivitas di setiap slide.<br>
-              &nbsp;&nbsp;• Gunakan kolom isian untuk menulis jawaban secara lengkap dan jujur.<br>
+              &nbsp;&nbsp;a. Kerjakan setiap soal/aktivitas di setiap slide.<br>
+              &nbsp;&nbsp;b. Gunakan kolom isian untuk menulis jawaban secara lengkap dan jujur.<br>
               &nbsp;&nbsp;• Untuk soal diskusi, tuliskan hasil diskusi kelompok di kolom yang tersedia.<br><br>
               5. <strong>Navigasi Antar Slide</strong><br>
-              &nbsp;&nbsp;• Gunakan tombol “Selanjutnya” dan “Sebelumnya” untuk berpindah slide.<br>
-              &nbsp;&nbsp;• Pastikan tidak ada slide yang terlewat agar semua bagian terisi.<br><br>
+              &nbsp;&nbsp;a. Gunakan tombol “Selanjutnya” dan “Sebelumnya” untuk berpindah slide.<br>
+              &nbsp;&nbsp;b. Pastikan tidak ada slide yang terlewat agar semua bagian terisi.<br><br>
               6. <strong>Menyimpan dan Mengunduh Hasil</strong><br>
-              &nbsp;&nbsp;• Setelah semua soal selesai, masuk ke slide terakhir.<br>
-              &nbsp;&nbsp;• Klik tombol “Download PDF” untuk mengunduh hasil kerja kelompok.<br>
-              &nbsp;&nbsp;• Simpan file PDF di perangkat dan kirim ke guru jika diminta.<br><br>
+              &nbsp;&nbsp;a. Setelah semua soal selesai, masuk ke slide terakhir.<br>
+              &nbsp;&nbsp;b. Klik tombol “Download PDF” untuk mengunduh hasil kerja kelompok.<br>
+              &nbsp;&nbsp;c. Simpan file PDF di perangkat dan kirim ke guru jika diminta.<br><br>
               7. <strong>Selesai dan Refleksi</strong><br>
-              &nbsp;&nbsp;• Setelah mengunduh PDF, klik tombol “Selesai” untuk menandai pengerjaan sudah tuntas.<br>
-              &nbsp;&nbsp;• Diskusikan bersama anggota kelompok tentang pengalaman belajar dan hal-hal yang perlu diperbaiki di pertemuan berikutnya.<br><br>
+              &nbsp;&nbsp;a. Setelah mengunduh PDF, klik tombol “Selesai” untuk menandai pengerjaan sudah tuntas.<br>
+              &nbsp;&nbsp;b. Diskusikan bersama anggota kelompok tentang pengalaman belajar dan hal-hal yang perlu diperbaiki di pertemuan berikutnya.<br><br>
               8. <strong>Tips Penting</strong><br>
-              &nbsp;&nbsp;• Jangan tutup browser sebelum mengunduh PDF agar data tidak hilang.<br>
-              &nbsp;&nbsp;• Jika ada anggota yang belum tercantum, tambahkan sebelum mengunduh hasil.<br>
-              &nbsp;&nbsp;• Jika terjadi kendala teknis, ulangi proses dari slide identitas kelompok.<br><br>
+              &nbsp;&nbsp;a. Jangan tutup browser sebelum mengunduh PDF agar data tidak hilang.<br>
+              &nbsp;&nbsp;b. Jika ada anggota yang belum tercantum, tambahkan sebelum mengunduh hasil.<br>
+              &nbsp;&nbsp;c. Jika terjadi kendala teknis, ulangi proses dari slide identitas kelompok.<br><br>
               9. <strong>Kontak Bantuan</strong><br>
-              &nbsp;&nbsp;• Jika mengalami kesulitan, hubungi guru atau admin media pembelajaran.<br>
+              &nbsp;&nbsp;a. Jika mengalami kesulitan, hubungi guru atau admin media pembelajaran.<br>
             </div>
-              • <strong>Materi:</strong> Pelajari konsep dasar seperti Ukuran Pemusatan (Mean, Median, Modus) dan Ukuran Penyebaran (Jangkauan, Kuartil, Simpangan Kuartil)<br>
-              • <strong>Proyek (Data Kelompok):</strong> Isi data kelompok, anggota, dan informasi sekolah untuk dokumentasi proyekmu<br>
-              • <strong>Kalkulator Statistik:</strong> Hitung Mean, Median, Modus, Kuartil, dan Jangkauan dengan langkah-langkah lengkap
-            </div>
-
-            <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#e8f0ff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
-              <strong>C. Menggunakan Kalkulator Statistik</strong><br>
-              • <strong>Input Data:</strong> Masukkan data angka yang ingin kamu hitung (contoh: 5, 7, 3, 8, 5, 9) ke dalam kolom yang tersedia<br>
-              • <strong>Pilih Perhitungan:</strong> Klik tombol sesuai kebutuhan (Mean, Median, Modus, Kuartil, atau Jangkauan)<br>
-              • <strong>Lihat Hasil & Langkah:</strong> Setiap perhitungan akan menampilkan hasil final dan langkah-langkah detail di bawahnya<br>
-              • <strong>Hitung Semua Sekaligus:</strong> Kamu bisa klik beberapa tombol perhitungan, semua hasil akan ditampilkan dan TIDAK SALING MENGHILANGKAN<br>
-              • <strong>Hapus Hasil:</strong> Klik tombol "🗑️ Hapus Semua Hasil" jika ingin menghapus semua perhitungan dan mulai dari awal
-            </div>
-
-            <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#ffffff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
-              <strong>D. Download Proyek sebagai PDF 📥</strong><br>
-              • <strong>Lokasi Tombol:</strong> Tombol "📥 Download Proyek Lengkap (PDF)" ada di halaman Kalkulator Statistik<br>
-              • <strong>Isi PDF:</strong> File PDF akan berisi 2 bagian lengkap:<br>
-              &nbsp;&nbsp;&nbsp;1️⃣ Halaman Data Kelompok (nama kelompok, anggota, sekolah)<br>
-              &nbsp;&nbsp;&nbsp;2️⃣ Halaman Kalkulator (data yang diinput + semua hasil perhitungan)<br>
-              • <strong>Kualitas:</strong> PDF berkualitas tinggi dengan warna jelas dan tajam<br>
-              • <strong>Nama File:</strong> Otomatis menggunakan format Proyek_Lengkap_[NamaKelompok]_[Tanggal].pdf
-            </div>
-
-            <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#f9fbff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a">
-              <strong>E. Tips Resiliensi Digital</strong><br>
-              • <strong>Jangan Panik:</strong> Jika ada masalah, periksa kembali data yang diinput atau coba refresh halaman (literasi digital)<br>
-              • <strong>Simpan Hasil:</strong> Download PDF proyekmu secara berkala agar tidak kehilangan data<br>
-              • <strong>Eksplorasi Bebas:</strong> Coba hitung semua jenis statistik (Mean, Median, Modus, dll) untuk memahami perbedaannya<br>
-              • <strong>Coba Lagi:</strong> Jika terjadi kendala teknis, ketangguhanmu dalam menghadapi kendala adalah bagian dari proses belajar menjadi siswa yang resilien
-            </div>
-
+        
             <div class="genty" style="margin-top:14px;padding:14px 16px;border:1px solid var(--line);border-radius:12px;background:#f9fbff;text-align:left;font-size:15px;line-height:1.7;color:#0f172a"><strong>🎯 Tujuan Akhir:</strong> Setelah mempelajari media ini, kalian diharapkan dapat memahami konsep statistika dasar, mampu menyajikan data dalam berbagai bentuk diagram, serta dapat menganalisis dan menginterpretasi data dengan benar.</div>
 
             <div style="margin-top:24px;display:flex;justify-content:space-between;gap:12px">
@@ -1211,7 +1182,6 @@
                                                           </div>
                                               <div style="margin-top:24px;display:flex;justify-content:flex-start;gap:12px">
                                                 <button onclick="updateSlide(918)" style="padding:12px 24px;background:#748cc4;color:#fff;border:none;border-radius:10px;font-weight:700;cursor:pointer;font-family:'Plus Jakarta Sans',sans-serif;box-shadow:0 4px 12px rgba(116,140,196,0.3);transition:all 0.22s ease" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">← Aktivitas 7</button>
-                                                <button onclick="updateSlide(1001)" style="padding:12px 24px;background:linear-gradient(135deg,#10b981,#34d399);color:#fff;border:none;border-radius:10px;font-weight:700;cursor:pointer;font-family:'Plus Jakarta Sans',sans-serif;box-shadow:0 4px 12px rgba(16,185,129,0.3);transition:all 0.22s ease" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">Penyajian Data</button>
                                               </div>
                                           </section>
       </div>
@@ -1577,7 +1547,7 @@
       if (slideNumber === 2) {
         prevBtn.style.visibility = 'visible';
         nextBtn.style.visibility = 'visible';
-        prevBtn.disabled = true;
+        prevBtn.disabled = false;
         nextBtn.disabled = false;
         backBtn.style.visibility = 'hidden';
       } else {
